--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,18 @@ trigger:
 - master
 - feature/*
 
+strategy:
+  matrix:
+    linux:
+      imageName: "ubuntu-16.04"
+    mac:
+      imageName: "macos-10.14"
+    windows:
+      imageName: "vs2017-win2016"
+  maxParallel: 3
+
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: $(imageName)
 
 steps:
 - task: Maven@3
